# Geo-Projektarbeit

./: .gitignore  260608_gradient_boosting.R  PROJEKTSTRUKTUR.md  README.md  SETUP.md  install_packages.R  metadata.json  model_summary.txt  prepare_arcgis_dataset.py  pyproject.toml  random_forest_shi.R  random_forest_shi.py  random_forest_shi_lat-long.R  random_forest_shi_lat-long.Rmd  shi_diagnostik.Rmd  tps_fitting_plot.R
Archiv/: Ergebnisse_pro_Schritt.txt  terminal_output.md
Datenaufbereitung/: README-data-prep.md
Dokumentation/: Begriffe.txt  DATEN_DOKUMENTATION.md  DATEN_DOKUMENTATION_LAT-LONG.md  glossar.html  parameter_tabelle_shi_cforest.html
Input/: points.gpkg
ML-rf-Ioannis/: README.md
Modell/: cforest_shi.rmd  ergebnisse_output.txt
Modell_LatLong/: cforest_shi_latlong.rmd
Output_lon/: README.md
Output_lon_lat/: README.md
R/: random_forest_shi.R
Workflow/: Geoprojekt-Workflow_UML_Kommentar.txt  Geoprojekt-Workflow_UML_mermaidCode
arcgis-development/: ARCGIS_MODELLANALYSE.md  ARCGIS_WORKFLOW.md  README_ARCGIS_TOOL.txt  SCHRITT_2_3_DETAILLIERT.md  ZUSAMMENFASSUNG_NEUE_STRUKTUR.md  points_for_visualization.csv  test_set_20pct.csv  training_full_dataset.csv  training_set_80pct.csv
data-prep/: a_auto_run_all_notebooks.ipynb  additional_expl.ipynb  calculate_shi.ipynb  data_clean_and_transform.ipynb  data_exploration.ipynb  data_preparation.ipynb  explore_indicator_data.ipynb  final_data_prep.ipynb
finalize_data_prep/: pyproject.toml
input-ml/: points.csv  points.geojson
output/: parameter_grid_results.csv  tree.dot
src/: App.tsx  (+1 more)
(+78 files in other folders)
