[project]
name = "geo-projektarbeit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "ipykernel>=7.2.0",
    "nbstripout>=0.9.1",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    
]
